force-app/main/default/objects/Project__c/fields/Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount__c</fullName>
    <label>Estimated Amount</label>
    <summarizedField>RequiredRole__c.Estimated_Amount__c</summarizedField>
    <summaryForeignKey>RequiredRole__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>