force-app/main/default/objects/Project__c/fields/Total_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Tasks_Completed__c</fullName>
    <label>Total Tasks Completed</label>
    <summaryFilterItems>
        <field>Project_Task__c.State__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>