force-app/main/default/objects/Project__c/validationRules/Squad_Lead_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>Squad_Lead_Assignment</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISBLANK( Squad_Lead__c ),
 Squad_Lead__r.Id !=  00NDo000000bCUD.00NDo000000b1GA.Id )</errorConditionFormula>
    <errorMessage>Please, assign a project resource as a leader.</errorMessage>
</ValidationRule>